test/contracts/never-accessed-1.expected.out
test/contracts/never-accessed-1.tact:2:5:
  1 | fun test(): Int {
> 2 |     let a: Int = 20;
          ^
  3 |     if (true) { // error: write-only variable
Write-only variable
Help: The variable value should be accessed
See: https://nowarp.github.io/docs/misti/docs/detectors/NeverAccessedVariables)